--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -56,6 +56,8 @@
     "2. Many to one: many input and only one output (eg. movie rating based on description)\n",
     "3. One to many: one input and many output (eg. music generation)\n",
     "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/0*qUcWLuiBgpFVACYE.png\">\n",
+    "\n",
     "# Training language model\n",
     "1. Collect large corpus (body) of text as the training set\n",
     "2. Tokenize the training text into one-hot vectors based on the dictionary (UNK for unknown words)\n",
