Update NLP and Diffusion

--- a/Diffusion.ipynb
+++ b/Diffusion.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "67c87f42",
    "metadata": {},
@@ -96,12 +97,18 @@
     "\n",
     "Note: $\\bar{\\alpha_t}$ and $\\beta_t$ represents the same things as the forward process. Essentailly, $x_{t-1} = \\frac{1}{\\sqrt{\\alpha_t}}(x_t - \\frac{\\beta_t}{\\sqrt{1 - \\bar{\\alpha_t}}} \\epsilon_\\theta(x_t,t))$ is a rearrangment of the forward equation. It subtracts the predicted noise from $x_t$ to obtain $x_{t-1}$\n",
     "\n",
-    "$\\sigma_t$: the standard deviation of the noise to be added during the reverse process at timestep $t$\n",
+    "$\\sigma_t = \\sqrt{\\beta_t}$: the standard deviation of the noise to be added during the reverse process at timestep $t$\n",
     "\n",
     "$z$: random Gaussian noise sample\n",
     "\n",
-    "The $\\sigma_t z$ term introduce randomness to the reverse process, which prevents it from collapsing to a deterministic process (outputing the average of the dataset). This is very important\n",
-    "\n",
+    "The $\\sigma_t z$ term introduce randomness to the reverse process, which prevents it from collapsing to a deterministic process (outputing the average of the dataset). This is very important"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "699b2801",
+   "metadata": {},
+   "source": [
     "## Noise scheduler\n",
     "A noise scheduler controlles the noise addition and removal process across multiple time steps to facilitate effective learning and high-quality generation.\n",
     "\n",
@@ -120,18 +127,29 @@
     "\n",
     "* Quadratic and Other Non-Linear Schedules: variations that adjust the rate of noise addition in non-linear ways to optimize performance\n",
     "\n",
-    "<img src=\"https://media.springernature.com/lw685/springer-static/image/art%3A10.1007%2Fs10462-023-10504-5/MediaObjects/10462_2023_10504_Fig6_HTML.png\">\n",
-    "\n",
-    "\n",
+    "<img src=\"https://media.springernature.com/lw685/springer-static/image/art%3A10.1007%2Fs10462-023-10504-5/MediaObjects/10462_2023_10504_Fig6_HTML.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39342d46",
+   "metadata": {},
+   "source": [
     "## Model architecture\n",
     "The model used to predict noise. The neural network takes in the noisy data, $x_t$ and the time step $t$ and output the predicted noise $\\epsilon_\\theta$. The input and output have the exact same size\n",
     "\n",
-    "<img src=\"https://www.assemblyai.com/blog/content/images/2022/05/image-19.png\" width=500>\n",
+    "<img src=\"https://learnopencv.com/wp-content/uploads/2023/02/denoising-diffusion-probabilistic-models_UNet_model_architecture.png\" width=500>\n",
     "\n",
     "* Time embedding: during the sampling process, we need to add the time embedding into the network by encoding the current timestep $t$ into a high-dimensional representation. This tells the model how much noise has been added to the data to help it making appropriate denoising predictions. At a particular timestep, $x_t$ is different from $x_t$ at other timestep due to cumulative noise introduced $1 - \\bar{\\alpha_t}$, so the time embedding is necessary to give the model context on how far along the reverse process it is and how much noise remains to be removed. Without this time context, the model will treats all inputs at different time context the same, which makes it impossible to reconstruct $x_0$. Common time embeddings includes sinusoidal, learned, or hybrid embeddings\n",
     "\n",
-    "* Context embedding: related to controlling the generation\n",
-    "\n",
+    "* Context embedding: related to controlling the generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "757a7b8f",
+   "metadata": {},
+   "source": [
     "## Training\n",
     "The training aims to let the model learn to predict how much noise to remove at different timestep\n",
     "\n",
@@ -151,25 +169,123 @@
     "\n",
     "$\\epsilon_\\theta$: the predicted noise\n",
     "\n",
-    "Essentially, we want to minimize the loss function to minimize the distance between the sampled and predicted noise\n",
-    "\n",
+    "Essentially, we want to minimize the loss function to minimize the distance between the sampled and predicted noise\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f610007",
+   "metadata": {},
+   "source": [
     "## Controllable generation\n",
+    "To make the process controllable, an additional input signal is introduced to guide the model during generation. This signal is the context and it can have the form of class label or text embedding to give model additional context for the denoising process\n",
     "\n",
+    "Therefore, the model will take in a noise, the timestep, and the context (label or text) when sampling. Then, it will convert the context into context embeddings (this can be done by using a few linear layers or more complex architecture like attention) and inject the context embedding to the signal at different layers with cross-attention or FiLM to produce signal that contains the context\n",
+    "\n",
+    "The training process is the same as the normal training process except the need to input the context to the model. The model still learns to predict the noise added but with both the timestep and the context as input. Similarily, the sampling process remains the same with additional context input. If the model is well-trained, it will make generations based on a given context\n",
+    "\n",
+    "<img src=\"https://arxiv.org/html/2403.01108v2/extracted/5629454/fig/pipeline/IP-adapter.png\" width=600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b9f3529",
+   "metadata": {},
+   "source": [
     "## DDIM\n",
     "DDPM is slow because its sampling method involves many timesteps and markov chain, so the every next signal $x_{t-1}$ depends on the previous one $x_t$ in the reverse diffusion process. Alternatively, DDIM (Denoising Diffusion Implicit Model) modifies the reverse process to be non-Markovian and deterministic, so it requires less timestep for the reverse process\n",
     "\n",
-    "Compared to DDPM, DDIM allows faster training and generation (10-100 times), but the generations will have slightly lower diversity and quality\n",
-    "\n",
+    "While both sharing the forward diffusion process, compared to DDPM, DDIM enables (10-100 times) faster sampling, but the generations will have slightly lower diversity and quality as trade-off. The common practice is that we can use DDPM to train the model (because they share the forward process, and training does not require sampling), since it's easier to implement, but after training, we can load the model and sample using DDIM for faster generations\n",
     "\n",
     "<img src=\"https://miro.medium.com/v2/resize:fit:1400/0*gSM9LfAuZA6f914Y.png\">\n",
     "\n",
-    "Note: DDPM and DDIM shares the same forware diffusion process"
+    "### Stochastic DDIM\n",
+    "The key for faster sampling process in DDIM is its non-markovian nature, which allows it to skip timesteps and not requiring all the past states. The reverse process for stochastic DDIM is discribed by \n",
+    "\n",
+    "$$x_{t-1} = \\sqrt{\\bar{\\alpha}_{t-1}} \\cdot \\frac{x_t - \\sqrt{1 - \\bar{\\alpha}_t} \\cdot \\epsilon^{(t)}_\\theta(x_t)}{\\sqrt{\\bar{\\alpha}_t}} + \\sqrt{1 - \\bar{\\alpha}_{t-1} - \\sigma_t^2} \\cdot \\epsilon^{(t)}_\\theta(x_t) + \\sigma_t \\epsilon_t$$\n",
+    "\n",
+    "$x_{t-1}$: the signal at timestep $t-1$\n",
+    "\n",
+    "$\\bar{\\alpha}_{t-1}, \\bar{\\alpha}_{t}$: the cumulative noise schedule for timestep $t-1$ and $t$. It determines how much of the original signal, $x_0$, should be preserved at the next step $t-1$ and $t$\n",
+    "\n",
+    "$\\epsilon^{(t)}_\\theta(x_t)$: the noise predicted by the neural network at timestep $t$\n",
+    "\n",
+    "$\\frac{x_t - \\sqrt{1 - \\bar{\\alpha}_t} \\cdot \\epsilon^{(t)}_\\theta(x_t)}{\\sqrt{\\bar{\\alpha}_t}}$: this term is a rearrangement for the forward process and predicts $x_0$ by subtracting the predicted noise from the neuarl network from $x_t$. This is the prediction made at timestep $t$ based on $x_t$; with smaller $t$, $x_t$ will be less noisy and the predictions for $x_0$ will be better\n",
+    "\n",
+    "$\\sigma_t^2$: the variance of the noise added at timestep $t$\n",
+    "\n",
+    "$\\sqrt{1 - \\bar{\\alpha}_{t-1} - \\sigma_t^2} \\cdot \\epsilon^{(t)}_\\theta(x_t)$: the correction term; it adds proper amount of noise back to the predicted $x_0$ term to obtain $x_{t-1}$. The intensity of the noise is smaller at $t-1$ compared to $t$ since $\\bar{\\alpha}_{t - 1}$ is greater than $\\bar{\\alpha}_{t}$, meaning we obtained a clearer image closer to $x_0$\n",
+    "\n",
+    "$\\sigma_t \\epsilon_t$: same as DDPM, which adds a random Gaussian noise scaled by $\\sigma_t$ to the signal to introduce diversity ($\\epsilon_t$ is a random sampled Gaussian noise). $\\sigma_t$ is the variance (or standard deviation) of the noise injected at timestep $t$, its given by\n",
+    "\n",
+    "$$\\sigma_t = \\eta \\cdot \\sqrt{\\frac{1 - \\hat{\\alpha}_{t-1}}{1 - \\hat{\\alpha}_t}} \\cdot \\sqrt{1 - \\frac{\\hat{\\alpha}_t}{\\hat{\\alpha}_{t-1}}}$$\n",
+    "\n",
+    "$\\eta$: a hyperparameter between 0 and 1 that determines the amount of stochastic noise added during sampling. If $\\eta = 0$, no noise is added, which corresponds to a deterministic DDIM process; if $\\eta= 1$, all the noise is added, this is the same as the DDPM process\n",
+    "\n",
+    "Therefore, DDIM is non-markovian since it deterministically predicts $x_0$ from $x_t$ without the need for intermediate timesteps. Also, we can determine how much noise to add back to $x_0$ to obtain $x_{t-1}$, meaning we can add less noise and skip timesteps\n",
+    "\n",
+    "### Deterministic DDIM\n",
+    "Although stochastic DDIM is non-markovian, it still introduce stochasticity by adding controlled randomness, $\\sigma_t \\epsilon_t$. Determinstic DDIM is a special case of stochastic DDIM when the standard deviation, $\\sigma_t$ is zero, with the formula \n",
+    "\n",
+    "$$x_{t-1} = \\sqrt{\\bar{\\alpha}_{t-1}} \\cdot \\frac{x_t - \\sqrt{1 - \\bar{\\alpha}_t} \\cdot \\epsilon^{(t)}_\\theta(x_t)}{\\sqrt{\\bar{\\alpha}_t}} + \\sqrt{1 - \\bar{\\alpha}_{t-1}} \\cdot \\epsilon^{(t)}_\\theta(x_t)$$\n",
+    "\n",
+    "This process is essentially the forward diffusion process with the predicted $x_0$ term, where $x_0 = \\frac{x_t - \\sqrt{1 - \\bar{\\alpha}_t} \\cdot \\epsilon^{(t)}_\\theta(x_t)}{\\sqrt{\\bar{\\alpha}_t}}$  \n",
+    "\n",
+    "Notice that there is no randomness in the reverse process, so it is completely deterministic, meaning given the same $x_T$, the output $x_0$ will always be the same. Thus, deterministic DDIM will have lower diversity compared to stochastic DDIM and DDPM\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "| Feature              | **DDPM**                               | **Deterministic DDIM**                | **Stochastic DDIM**                   |\n",
+    "|----------------------|----------------------------------------|---------------------------------------|---------------------------------------|\n",
+    "| **Reverse Process**  | Markovian, stochastic                 | Non-Markovian, deterministic          | Non-Markovian, partially stochastic   |\n",
+    "| **Stochasticity**    | Random noise added at each step       | No randomness; fully deterministic    | Controlled randomness ( $\\sigma_t \\epsilon_t$ ) |\n",
+    "| **Sampling Speed**   | Slow, many timesteps ( T = 1000 ) | Fast, fewer timesteps ( T = 50 )  | Fast, fewer timesteps (\\( T = 50 \\))  |\n",
+    "| **Sample Diversity** | High (stochastic sampling)            | Low (deterministic outputs)           | Moderate (some stochasticity added)   |\n",
+    "| **Mathematical Basis** | Probabilistic reverse diffusion       | Deterministic reparameterization      | Hybrid: deterministic + stochastic    |\n",
+    "| **Use Case**         | Creative tasks needing high diversity | Speed-critical or controlled tasks    | Balanced diversity and speed          |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f58ee674",
+   "metadata": {},
+   "source": [
+    "## Classifier guidance\n",
+    "Classifier guidance is a technique used to allow conditional generations in diffusion model by using a pre-trained classifier. This approach requires to train an extra classifier, but the base diffusion model can be trained in an unconditional manner without explicit labels on data\n",
+    "\n",
+    "### Train classifier\n",
+    "The goal of the classifier is to predict which class, $y$, the noisy input sample at timesetp $t$, $x_t$, belongs to. Therefore, we first need to apply the forward diffusion process to the labeled data to create noisy samples. Then, we input noisy samples, $x_t$, and the timestep, $t$, tothe classifier (CNN architecture) to predict $p(y | x_t, t)$. \n",
+    "\n",
+    "Steps:\n",
+    "1. Sample the batch in $(x, y)$ pair format, where $x$ are the sample data and $y$ are the corresponding labels\n",
+    "2. Sample a different timestep $t$ for each data-label pair in the batch (the number of $t$ sampled is the same of the batch size)\n",
+    "3. Sample a random noise for data-label pair\n",
+    "3. Apply forward diffusion process by adding noise to the data based on its corresponding timestep to obtain $x_t$\n",
+    "4. Input the noisy data $x_t$ and the timestep $t$ to the classifier to predict the label $\\hat y$\n",
+    "5. Use the cross-entropy loss function to calculate the loss\n",
+    "6. Backprop to update parameters\n",
+    "\n",
+    "### Sampling with classifier guidance\n",
+    "After trained the classifier and the diffusion model unconditionally, we can guild the model using the classifier to perform conditional generations\n",
+    "\n",
+    "First, the model samples a random Gaussian noise and predict the noise added to it (like a normal diffusion model) to obtain \n",
+    "\n",
+    "$$\\hat{\\epsilon}_{uncond}(x_t, t)$$\n",
+    "\n",
+    "This noise does not contain any conditional information. Next, the input the sample $x_t$ and timestep $t$ into the classifier and computes the gradient of the log-likelihood of the desired class $y$ with respect to the noisy sample $x_t$, which is \n",
+    "\n",
+    "$$\\nabla_{x_t} \\log {p(y | x_t, t)}$$\n",
+    "\n",
+    "Because maximizing the log-likelihood means making $x_t$ more likely to belong to class $y$, its gradient points in the direction where the log-likelihood increases most rapidly. Essentially, this gradient encodes the changes needed to make $x_t$ closer to $y$\n",
+    "\n",
+    "\n",
+    "<img src=\"https://ffighting.net/wp-content/uploads/2023/08/image-2.png\" width=500>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6462e484",
+   "id": "0fda5dae",
    "metadata": {},
    "outputs": [],
    "source": []
