Update gan&nlp, restructure notebook

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -273,7 +273,12 @@
     "4. Gradient clipping: force the gradient to be in a certain range (the range requires tuning)\n",
     "\n",
     "# Gated recurrent unit (GRU)\n",
-    "GRU solves the vanishing gradient problem by capturing the long term dependencies using memory cells\n",
+    "GRU solves the vanishing gradient problem by capturing the long term dependencies using memory cells, which contains 2 gates, an update gate and a relevance gate. The update gate decides how much past information to remember and forget, and the relevance gate determines how much past information will we keep when forming the new memory\n",
+    "\n",
+    "Note: $c^{<t>}$ and $a^{<t>}$ are the same in the context of GRU, so there's only 2 inputs and 2 outputs for each GRU cell\n",
+    "\n",
+    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/gru-ltr.png?00f278f71b4833d32a87ed53d86f251c\" width=500>\n",
+    "\n",
     "\n",
     "$$c^{<t>} = a^{<t>}$$\n",
     "\n",
@@ -301,7 +306,6 @@
     "\n",
     "If $\\Gamma_u \\approx 0$, $c^{<t>} = c^{<t-1>}$\n",
     "\n",
-    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/gru-ltr.png?00f278f71b4833d32a87ed53d86f251c\" width=500>\n",
     "\n",
     "## LSTM\n",
     "Long Short-Term Memory Networks (LSTMs) solves the managing long-term data dependencies problem that traditional RNN faced by using a system of gates that control how information flows through the network — deciding what to keep and what to forget over extended sequences\n",
@@ -336,15 +340,28 @@
     "\n",
     "In general, LSTM is more powerful and flexible than the GRU but requires more computational power\n",
     "\n",
-    "# Bidirectional RNN\n",
-    "Bidirectional recurrent neural networks connect two hidden layers of opposite directions to the same output. With this form of generative deep learning, the output layer can get information from past and future states simultaneously\n",
+    "# Different types of RNNs\n",
+    "### Deep RNN\n",
+    "The Deep RNN is constructed by stacking multiple layers of RNN together. In this architecture, every RNN layer predicts the sequence of outputs to send to the next RNN layer instead of predicting a single output value. Then the final RNN layer predicts the single output\n",
     "\n",
-    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/bidirectional-rnn-ltr.png?e3e66fae56ea500924825017917b464a\" width=500>\n",
+    "Note: we can start processing the next layer as soon as the current layer produces an output for the current time step, and there is no need to wait for the entire sequence to be processed by the current layer\n",
     "\n",
-    "# Deep RNN\n",
-    "The Deep RNN is constructed by stacking multiple layers of RNN together. Thus, each unit will recieve two inputs, one from the previous layer at the same time step and one from the current layer at the previous time step\n",
+    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/deep-rnn-ltr.png?f57da6de44ddd4709ad3b696cac6a912\" width=300>\n",
     "\n",
-    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/deep-rnn-ltr.png?f57da6de44ddd4709ad3b696cac6a912\" width=500>"
+    "### CNN-RNN\n",
+    "CNN-RNN architecture is a combination of CNN and RNN architectures. It first uses the CNN network layer to extract the essential features from the input and then send them to the RNN layer to support sequence prediction. An example application for this architecture is generating textual descriptions for the input image\n",
+    "\n",
+    "<img src=\"https://media.springernature.com/lw1200/springer-static/image/art%3A10.1007%2Fs11063-024-11687-w/MediaObjects/11063_2024_11687_Fig3_HTML.png\" width=500>\n",
+    "\n",
+    "### Encoder-decoder RNN (Seq2Seq)\n",
+    "Encoder-decoder RNN architecture has an encoder to convert the input to an intermediate encoder vector. Then one decoder transforms the intermediate encoder vector into the final result. An application for this is model is machine translation\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*1JcHGUU7rFgtXC_mydUA_Q.jpeg\" width=500>\n",
+    "\n",
+    "### Bidirectional RNN\n",
+    "Bidirectional RNN connect two RNN layers together, one in forwarding direction and the other in backward direction. With this architecture, the output layer can get information from past and future simultaneously. In general, the forward and backward will process independently, and their output will be combined to produce the final output. An application for this model is sentiment classification\n",
+    "\n",
+    "<img src=\"https://stanford.edu/~shervine/teaching/cs-230/illustrations/bidirectional-rnn-ltr.png?e3e66fae56ea500924825017917b464a\" width=400>"
    ]
   },
   {
