Add attention for NLP, styleGAN for GANs

--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d2e2623",
    "metadata": {},
@@ -445,21 +444,141 @@
     "\\text{Output} = (1 - \\alpha) \\cdot \\text{Downsampling Output} + \\alpha \\cdot \\text{Conv Block Output}\n",
     "$$\n",
     "\n",
-    "As $\\alpha$ increases from 0 to 1, the output gradually transitions the conv block output, which ensures a smooth transition\n",
+    "As $\\alpha$ increases from 0 to 1, the output gradually shifts to the conv block output, which ensures a smooth transition\n",
     "\n",
-    "The generator and discriminator grow symetrically, which means whenever a new layer is inserted into the generator, a new layer will be inserted into the discriminator too. However, the blending factor is not shared between generator and the discriminator, so they control the blending process independently. This is because sharing $\\alpha$ could lead to instability. In general, the generator might need a longer blending period to adapt to a new resolution, while the discriminator might adapt more quickly. By keeping $\\alpha$ separate, each model can transition at its own pace, and grow together until both models are ready"
+    "The generator and discriminator grow symetrically, which means whenever a new layer is inserted into the generator, a new layer will be inserted into the discriminator too. However, the blending factor is not shared between generator and the discriminator, so they control the blending process independently. This is because sharing $\\alpha$ could lead to instability. In general, the generator might need a longer blending period to adapt to a new resolution, while the discriminator might adapt more quickly. By keeping $\\alpha$ separate, each model can transition at its own pace, and grow together until both models are ready\n",
+    "\n",
+    "## Noise mapping network\n",
+    "The noise mapping network is used to give the model more control over the generated features and improve interpretability. In traditional GANs, a latent vector, z, is sampled from a Gaussian distribution and directly used as input to the generator. However, the z space, which is simple and uniformly distributed, does not reflect the structure of the target space, where features are complex and have non-uniform distributions.\n",
+    "\n",
+    "When the generator tries to map the latent vector z directly to the target space (from something very simple to something very complex), it must learn a highly complex mapping. This process often leads to **entanglement**, where:\n",
+    "- A single entry in z influences multiple features in the generated image.\n",
+    "- A single feature in the generated image is influenced by multiple entries in z.\n",
+    "\n",
+    "As a result, the latent space z becomes non-interpretable and difficult to manipulate. For example, changing a single entry in z may alter multiple unrelated features in the output, making it hard to control individual features of the generated image.\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*bKV6_5B4BY89IM3PHnsvrQ.png\" width=500>\n",
+    "\n",
+    "The noise mapping network is used to address this issue. The network is a series of fully connected layers that learns to map the noise z from the Z space to an intermediate noise vector w in W space to give more control on the generated outputs. The networks learns a non-linear mapping from z to w, making the W space less entangled, meaning\n",
+    "\n",
+    "- Each entry in w can control specific, independent features in the generated image.\n",
+    "- Changes to one entry in w only affect one or a few aspects of the output.\n",
+    "\n",
+    "This transformation enables more control over the generated features, allowing users to modify individual features (e.g., pose, texture, or color) in a more intuitive and interpretable way\n",
+    "\n",
+    "Instead of using w as the initial input to the generator (like traditional GANs), StyleGAN injects w into multiple layers of the generator via **Adaptive Instance Normalization (AdalN)**. As a result, the generator's initial 4x4 layer is not based on w or z; it is a learned **constant tensor** (e.g., 4x4xC), where C is the number of channels).\n",
+    "\n",
+    "This constant serves as a fixed starting point, which the generator progressively refines into an image. The intermediate latent vector w is injected at multiple layers to control various aspects of the generated image, such as:\n",
+    "- Coarse features in early layers.\n",
+    "- Intermediate details in mid-layers.\n",
+    "- Fine textures in later layers.\n",
+    "\n",
+    "The separation of the constant input and w based modulation improves disentanglement and provides more precise control over the generated image.\n",
+    "\n",
+    "<img src=\"https://blog.paperspace.com/content/images/2022/09/Untitled-Diagram.drawio--3-.png\" width=500>\n",
+    "\n",
+    "## Adaptive instance normalization (AdalN)\n",
+    "### Instance Normalization\n",
+    "\n",
+    "Instance normalization is a technique that normalizes each individual sample based on its own mean and standard deviation for each channel. The formula for instance normalization is:\n",
+    "\n",
+    "$$y = \\frac{x_i - \\mu(x_i)}{\\sqrt{\\sigma(x_i)^2 + \\epsilon}}$$\n",
+    "\n",
+    "Where:\n",
+    "- $x_i$: Feature map for a single sample.\n",
+    "- $\\mu(x_i)$: Mean of the feature map for each channel of the individual sample.\n",
+    "- $\\sigma(x_i)^2$: Variance of the feature map for each channel of the individual sample.\n",
+    "- $\\epsilon$: A small constant added to prevent division by zero.\n",
+    "\n",
+    "<img src=\"https://velog.velcdn.com/images/harms/post/3d2d1c19-2d67-4012-8238-02527cd5666d/image.png\" width=600>\n",
+    "\n",
+    "In comparison to Batch Normalization:\n",
+    "- Instance normalization computes the mean and standard deviation for each channel of each individual sample. For a batch of size N and C channels, instance normalization performs this calculation $C \\times N$ times.\n",
+    "- In contrast, **batch normalization** computes the mean and standard deviation for each channel across the entire batch, introducing **dependencies between samples**.\n",
+    "\n",
+    "\n",
+    "In practice, there batch norm and instance norm are not used in combination because introducing in-batch dependencies whether improve or hurt the performance depending on the model architecture\n",
+    "\n",
+    "### Apply adaptive style\n",
+    "To inject the style information (controlled by w) into the generator, we use the AdalN layer between convultion layer. An AdalN layer will normalize the output from the previous convolutional layer using instance normalization, then scale and shift it to match the distribution of the desired style based on w. Essentially, the style of the generated image is controlled by shifting and scaling the distribution\n",
+    "\n",
+    "<img src=\"https://www.researchgate.net/publication/343021405/figure/fig3/AS:915394470625280@1595258457162/Generator-architecture-of-the-StyleGAN-neural-network-1.png\" width=400>\n",
+    "\n",
+    "To add the desired style into the AdalN layer, we convert the style vector, w, into two parameter, $y_s$ and $y_b$, using a small neural network, where $y_s$ is the scaling factor and $y_b$ is the bias factor. Thus, the AdalN layer is described as \n",
+    "\n",
+    "$$\\text{AdalN(x, y)} = y_s (\\frac{x - \\mu(x)}{\\sigma(x)}) + y_b$$\n",
+    "\n",
+    "$AdalN(x, y)$: the output by the AdalN layer\n",
+    "\n",
+    "$y_s, y_b$: the scale and bias factor calculated based on the style vector w\n",
+    "\n",
+    "$x$: the input image from the previous conv layer\n",
+    "\n",
+    "$(\\frac{x - \\mu(x)}{\\sigma(x)})$: the input image after instance normalization\n",
+    "\n",
+    "Each AdalN layer **re-normalizes** the previous output. So although each AdalN layer will scale and shift the generated distribution, the next AdalN will apply a new style transformation at different levels of detail, ensuring that style control is applied progressively\n",
+    "\n",
+    "## Style mixing\n",
+    "Style mixing allows the combination of styles from two different style vectors to create hybrid images. To achieve this, we inject **two style vectors** $w_1$ and $w_2$ into different layers of the generator. \n",
+    "\n",
+    "- **Early layers** (coarse-level control) influence **high-level features**, such as face shape, pose, and overall structure.\n",
+    "- **Mid layers** refine **intermediate features**, such as facial features and hairstyle.\n",
+    "- **Late layers** (fine-level control) determine **small details**, such as textures, wrinkles, and color variations.\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*Q4WR9OXN20wami7h0VYrqw.gif\" width=500>\n",
+    "\n",
+    "By controlling which layers receive $w_1$ and which receive $w_2$, we can blend different aspects of each style in a controllable manner, enabling **hybrid-style image generation**. This hierarchical application of style enables **disentangled and controllable** feature synthesis in StyleGAN.\n",
+    "\n",
+    "## Stochastic Variation\n",
+    "\n",
+    "To introduce **randomness** and enhance fine details in the generated images, StyleGAN injects **random Gaussian noise** into the feature maps **before each AdaIN layer**. This noise is controlled by a **learned scaling parameter** $\\lambda$, which determines the amount of noise added at each layer.\n",
+    "\n",
+    "- **Effect on Image Generation**:\n",
+    "  - **Fine-grained details** such as wrinkles, skin texture, and hair strands are influenced by stochastic variation.\n",
+    "  - Unlike style control (which affects high-level features), stochastic noise introduces **small, unpredictable variations** while preserving the overall structure of the image.\n",
+    "\n",
+    "By learning $\\lambda$ for each layer, the model **automatically adjusts the impact of noise**, ensuring that only appropriate details (not major structural elements) are affected.\n",
+    "\n",
+    "## Training StyleGANs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c5b4d69d",
+   "id": "77269243",
    "metadata": {},
-   "source": []
+   "source": [
+    "# GAN Applications\n",
+    "\n",
+    "1. **Image-to-Image Translation**  \n",
+    "   - GANs can transform one image domain into another while preserving structure.  \n",
+    "   - Examples:  \n",
+    "     - **Super-Resolution** (e.g., SRGAN) - Enhancing image resolution.  \n",
+    "     - **GauGAN** - Generating photorealistic images from segmentation maps.  \n",
+    "     - **Style Transfer & Filters** - Applying artistic or domain-specific transformations.  \n",
+    "\n",
+    "2. **Multimodal Generation**  \n",
+    "   - GANs can generate outputs across different modalities.  \n",
+    "   - Examples:  \n",
+    "     - **Text-to-Image** (e.g., DALL·E, AttnGAN) - Generating images from textual descriptions.  \n",
+    "     - **Image-to-Video** (e.g., MoCoGAN) - Creating video sequences from a single image.  \n",
+    "\n",
+    "3. **Image Editing & Manipulation**  \n",
+    "   - GANs allow fine-grained control over image modifications.  \n",
+    "   - Examples:  \n",
+    "     - **Face Editing** (e.g., StyleGAN, StarGAN) - Changing facial attributes like age or expression.  \n",
+    "     - **Inpainting** (e.g., DeepFill) - Filling in missing or damaged image parts.  \n",
+    "\n",
+    "4. **Data Augmentation**  \n",
+    "   - GANs can generate synthetic data to enhance training datasets.  \n",
+    "   - Examples:  \n",
+    "     - **Medical Image Synthesis** - Creating synthetic MRIs or X-rays to supplement real data.  \n",
+    "     - **Imbalanced Data Handling** - Augmenting underrepresented classes in datasets.  "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4847644b",
+   "id": "683caf7b",
    "metadata": {},
    "outputs": [],
    "source": []
