--- a/Diffusion.ipynb
+++ b/Diffusion.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "67c87f42",
    "metadata": {},
@@ -237,7 +236,7 @@
     "\n",
     "| Feature              | **DDPM**                               | **Deterministic DDIM**                | **Stochastic DDIM**                   |\n",
     "|----------------------|----------------------------------------|---------------------------------------|---------------------------------------|\n",
-    "| **Reverse Process**  | Markovian, stochastic                 | Non-Markovian, deterministic          | Non-Markovian, partially stochastic   |\n",
+    "| **Reverse Process**  | Markovian, stochastic                 | Non-Markovian, deterministic          | Becomes Markovian, partially stochastic   |\n",
     "| **Stochasticity**    | Random noise added at each step       | No randomness; fully deterministic    | Controlled randomness ( $\\sigma_t \\epsilon_t$ ) |\n",
     "| **Sampling Speed**   | Slow, many timesteps ( T = 1000 ) | Fast, fewer timesteps ( T = 50 )  | Fast, fewer timesteps (\\( T = 50 \\))  |\n",
     "| **Sample Diversity** | High (stochastic sampling)            | Low (deterministic outputs)           | Moderate (some stochasticity added)   |\n",
